Fix: home slide text centred on mobile

--- a/_less/slides.less
+++ b/_less/slides.less
@@ -91,7 +91,7 @@
 .slide#home {
   // background: #1d1d1d url(img/unihack-home-bg.jpg) center center no-repeat;
   // background-size: cover;
-
+  text-align: center;
   background: #181818 url(img/homepage-bg.jpg) top left no-repeat;
   background-size: 800px auto;
 
@@ -142,14 +142,12 @@
 
 @media (min-width: @screen-sm) {
   .slide#home {
-    text-align: center;
     background-size: 1000px auto;
   }
 }
 
 @media (min-width: @screen-md) {
   .slide#home {
-    text-align: center;
     background-color: #1d1d1d;
     background-size: cover;
 
